--- a/package.json
+++ b/package.json
@@ -38,9 +38,14 @@
     "test": "NODE_ENV=test ."
   },
   "devDependencies": {
+    "axios": "^1.6.7",
     "chalk": "^5.3.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jshint": "^2.13.6",
+    "mariadb": "^3.2.3",
+    "morgan": "^1.10.0",
+    "npm-registry-fetch": "^16.1.0",
     "prettier": "^3.2.5"
   },
   "engines": {
