--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   "main": "./src/server.js",
   "license": "MIT",
   "scripts": {
-    "prettier": "prettier ./src/ --write",
+    "prettier": "prettier ./src/ ./public/ --write",
     "lint": "jshint ./src/",
+    "logs": "node ./src/utils/getLog.js",
     "dev": "NODE_ENV=dev nodemon .",
     "prod": "NODE_ENV=prod node .",
     "test": "NODE_ENV=test ."
@@ -46,12 +47,10 @@
     "mariadb": "^3.2.3",
     "morgan": "^1.10.0",
     "npm-registry-fetch": "^16.1.0",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   },
   "engines": {
     "node": "20.x"
-  },
-  "dependencies": {
-    "nodemon": "^3.1.0"
   }
 }
