added jshint conf

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,41 @@
 {
   "node": true,
   "browser": true,
-  "esversion": 8
+  "esversion": 8,
+  "undef": true,
+  "unused": true,
+  "globals": {
+    "PORT": true,
+    "HOST": true,
+    "NODE_ENV": true,
+    "LOGS": true,
+    "LOGS_PATH": true
+  },
+  "eqnull": true,
+  "asi": true,
+  "curly": false,
+  "camelcase": false,
+  "forin": true,
+  "freeze": true,
+  "futurehostile": true,
+  "latedef": true,
+  "leanswitch": true,
+  "maxdepth": 3,
+  "maxerr": 101,
+  "maxparams": 4,
+  "maxstatements": 8,
+  "noarg": true,
+  "nocomma": true,
+  "nonbsp": true,
+  "nonew": true,
+  "noreturnawait": true,
+  "varstmt": true,
+  "debug": true,
+  "boss": true,
+  "funcscope": true,
+  "iterator": true,
+  "loopfunc": true,
+  "notypeof": true,
+  "proto": true,
+  "scripturl": true
 }
