--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "nodecdn",
   "version": "0.0.1",
-  "description": "Cdn service",
+  "description": "fast javascript cdn service used npm base for packages",
   "keywords": [
     "docker",
     "nodejs",
     "cdn",
     "express",
     "cdnjs",
-    "nodecdn"
+    "nodecdn",
+    "fly.io",
+    "cloudflare",
+    "varnish"
   ],
   "author": {
     "name": "fxhxyz4",
@@ -32,22 +35,23 @@
   "license": "MIT",
   "scripts": {
     "prettier": "prettier ./src/ ./public/ --write",
-    "lint": "jshint ./src/",
+    "lint": "jshint --verbose --config ./.jshintrc ./src/",
     "logs": "node ./src/utils/getLog.js",
     "dev": "NODE_ENV=dev nodemon .",
     "prod": "NODE_ENV=prod node .",
-    "test": "NODE_ENV=test ."
+    "test": "NODE_ENV=test mocha ."
   },
   "devDependencies": {
     "axios": "^1.6.7",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "jshint": "^2.13.6",
     "mariadb": "^3.2.3",
     "morgan": "^1.10.0",
-    "npm-registry-fetch": "^16.1.0",
     "nodemon": "^3.1.0",
+    "npm-registry-fetch": "^16.1.0",
     "prettier": "^3.2.5"
   },
   "engines": {
