--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "author": {
     "name": "fxhxyz4",
-    "email": "fxhxyz@proton.me",
+    "email": "fxhsec@proton.me",
     "url": "https://fxhxyz.vercel.app/"
   },
   "homepage": "https://github.com/fxhxyz4/nodecdn",
@@ -27,7 +27,7 @@
   "maintainers": [
     {
       "name": "fxhxyz4",
-      "email": "fxhxyz@proton.me"
+      "email": "fxhsec@proton.me"
     }
   ],
   "type": "module",
